--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <base href="/">
+    <base href="https://micheliseneld.com/">
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="./favicon.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
