Page now scrolls to top when rerouted.

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <base href="https://micheliseneld.com/">
+    <!-- <base href="https://micheliseneld.com/"> -->
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="./favicon.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
